--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="css/modern-normalize.css">
         <link rel="stylesheet" href="css/style.css">
         <link
             href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
@@ -14,116 +15,123 @@
 
     <body class="body">
         <header class="header">
-            <nav class="nav">
-                <a class="link nav-link logo" href="index.html" lang="en">Web <span class="logo-span">Studio</span></a>
-                <ul class="list nav-list">
-                    <li class="nav-list-item">
-                        <a class="link nav-list-link" href="index.html">Студия</a>
-                    </li>
-                    <li class="nav-list-item">
-                        <a class="link nav-list-link" href="portfolio.html">Портфолио</a>
-                    </li>
-                    <li class="nav-list-item">
-                        <a class="link nav-list-link" href="#">Контакты</a>
-                    </li>
-                </ul>
-            </nav>
-            <ul class="list header-address">
-                <li class="header-address-item"><a class="link header-address-contact"
-                        href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li class="header-address-item"><a class="link header-address-contact" href="tel:+380961111111">+38 096 111 11 11</a>
-                </li>
-            </ul>
-        </header>
-        <main class="portfolio">
-            <h1 class="portfolio-title">Портфолио</h1>
-            <ul class="list search-list">
-                <li class="search-item"><button class="btn search-btn" type="button">Все</button></li>
-                <li class="search-item"><button class="btn search-btn" type="button">Веб-сайты</button></li>
-                <li class="search-item"><button class="btn search-btn" type="button">Приложения</button></li>
-                <li class="search-item"><button class="btn search-btn" type="button">Дизайн</button></li>
-                <li class="search-item"><button class="btn search-btn" type="button">Маркейтинг</button></li>
-            </ul>
-            <ul class="list product-list">
-                <li class="product-item">
-                    <img class="product-img" 
-                    src="images/portfolio_img.jpg" alt="ноутбук"
-                    width: 370px>
-                    <h2 class="product-title">Технокряк</h2>
-                    <p class="product-post-title">Веб-сайт</p>
-                </li>
-                <li class="product-item">
-                    <img class="product-img" 
-                    src="images/portfolio_img2.jpg" alt="два баскетболиста"
-                    width: 370px>
-                    <h2 class="product-title" >Постер New Orlean vs Golden Star</h2>
-                    <p class="product-post-title">Дизайн</p>
-                </li>
-                <li class="product-item">
-                    <img class="product-img" 
-                    src="images/portfolio_img3.jpg" alt="эмблема в форме рыбы с названием ресторана"
-                    width: 370px>
-                    <h2 class="product-title">Ресторан Seafood</h2>
-                    <p class="product-post-title">Приложение/p>
-                </li>
-                <li class="product-item">
-                    <img class="product-img" 
-                    src="images/portfolio_img4.jpg" alt="наушники"
-                    width: 370px>
-                    <h2 class="product-title">Проект Prime</h2>
-                    <p class="product-post-title">Маркетинг</p>
-                </li>
-                <li class="product-item">
-                    <img class="product-img" 
-                    src="images/portfolio_img5.jpg" alt="два кубика"
-                    width: 370px>
-                    <h2 class="product-title">Проект Boxes</h2>
-                    <p class="product-post-title">Приложение</p>
-                </li>
-                <li class="product-item">
-                    <img class="product-img" 
-                    src="images/portfolio_img6.jpg" alt="экран компьютера"
-                    width: 370px>
-                    <h2 class="product-title" lang="en">Inspiration has no Borders</h2>
-                    <p class="product-post-title">Веб-сайт</p>
-                </li>
-                <li class="product-item">
-                    <img class="product-img" 
-                    src="images/portfolio_img7.jpg" alt="журнал"
-                    width: 370px>
-                    <h2 class="product-title">Издание Limited Edition</h2>
-                    <p class="product-post-title">Дизайн</p>
-                </li>
-                <li class="product-item">
-                    <img class="product-img" 
-                    src="images/portfolio_img8.jpg" alt="вкладыш"
-                    width: 370px>
-                    <h2 class="product-title">Проект LAB</h2>
-                    <p class="product-post-title">Маркетинг</p>
-                </li>
-                <li class="product-item">
-                    <img class="product-img" 
-                    src="images/portfolio_img9.jpg" alt="ноутбук"
-                    width: 370px>
-                    <h2 class="product-title" lang="en">Growing Business</h2>
-                    <p class="product-post-title">Приложение</p>
-                </li>
-            </ul>
-
-        </main>
-        <footer class="footer">
-            <a class="link footer-link logo" href="index.html" lang="en">Web <span class="logo-span">Studio</span></a>
-            <address class="footer-address">
-                <ul class="list footer-address-list">
-                    <li class="footer-address-item"><a class="link footer-address-link"
-                            href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!4m13!1m7!3m6!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!2z0LHRg9C7LiDQm9C10YHQuCDQo9C60YDQsNC40L3QutC4LCAyNiwg0JrQuNC10LIsIDAyMDAw!3b1!8m2!3d50.4265807!4d30.5383858!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
-                            target="_blank" rel="noreferrer noopener">г. Киев, пр-т Леси Украинки, 26</a></li>
-                    <li class="footer-address-item"><a class="link footer-address-contact"
+            <div class="container header-box">
+                <nav class="nav">
+                    <a class="link nav-link" href="index.html" lang="en">Web <span class="nav-span">Studio</span></a>
+                    <ul class="list nav-list">
+                        <li class="nav-list-item">
+                            <a class="link nav-list-link" href="index.html">Студия</a>
+                        </li>
+                        <li class="nav-list-item">
+                            <a class="link nav-list-link" href="portfolio.html">Портфолио</a>
+                        </li>
+                        <li class="nav-list-item">
+                            <a class="link nav-list-link" href="#">Контакты</a>
+                        </li>
+                    </ul>
+                </nav>
+                <ul class="list header-address">
+                    <li class="header-address-item"><a class="link header-address-contact"
                             href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li class="footer-address-item"><a class="link footer-address-contact" href="tel:+380961111111">+38 096 111
+                    <li class="header-address-item"><a class="link header-address-contact" href="tel:+380961111111">+38 096 111
                             11 11</a></li>
                 </ul>
-            </address>
+            </div>
+        </header>
+        <main class="portfolio">
+            <div class="container">
+                <h1 class="visually-hidden">Портфолио</h1>
+                <ul class="list search-list">
+                    <li class="search-item"><button class="search-btn" type="button">Все</button></li>
+                    <li class="search-item"><button class="search-btn" type="button">Веб-сайты</button></li>
+                    <li class="search-item"><button class="search-btn" type="button">Приложения</button></li>
+                    <li class="search-item"><button class="search-btn" type="button">Дизайн</button></li>
+                    <li class="search-item"><button class="search-btn" type="button">Маркейтинг</button></li>
+                </ul>
+            </div>
+            <div class="container">
+                <ul class="list product-list">
+                    <li class="product-item">
+                        <img class="product-img" 
+                        src="images/portfolio_img.jpg" alt="ноутбук"
+                        width: 370px>
+                        <h2 class="product-title">Технокряк</h2>
+                        <p class="product-post-title">Веб-сайт</p>
+                    </li>
+                    <li class="product-item">
+                        <img class="product-img" 
+                        src="images/portfolio_img2.jpg" alt="два баскетболиста"
+                        width: 370px>
+                        <h2 class="product-title" >Постер New Orlean vs Golden Star</h2>
+                        <p class="product-post-title">Дизайн</p>
+                    </li>
+                    <li class="product-item">
+                        <img class="product-img" 
+                        src="images/portfolio_img3.jpg" alt="эмблема в форме рыбы с названием ресторана"
+                        width: 370px>
+                        <h2 class="product-title">Ресторан Seafood</h2>
+                        <p class="product-post-title">Приложение/p>
+                    </li>
+                    <li class="product-item">
+                        <img class="product-img" 
+                        src="images/portfolio_img4.jpg" alt="наушники"
+                        width: 370px>
+                        <h2 class="product-title">Проект Prime</h2>
+                        <p class="product-post-title">Маркетинг</p>
+                    </li>
+                    <li class="product-item">
+                        <img class="product-img" 
+                        src="images/portfolio_img5.jpg" alt="два кубика"
+                        width: 370px>
+                        <h2 class="product-title">Проект Boxes</h2>
+                        <p class="product-post-title">Приложение</p>
+                    </li>
+                    <li class="product-item">
+                        <img class="product-img" 
+                        src="images/portfolio_img6.jpg" alt="экран компьютера"
+                        width: 370px>
+                        <h2 class="product-title" lang="en">Inspiration has no Borders</h2>
+                        <p class="product-post-title">Веб-сайт</p>
+                    </li>
+                    <li class="product-item">
+                        <img class="product-img" 
+                        src="images/portfolio_img7.jpg" alt="журнал"
+                        width: 370px>
+                        <h2 class="product-title">Издание Limited Edition</h2>
+                        <p class="product-post-title">Дизайн</p>
+                    </li>
+                    <li class="product-item">
+                        <img class="product-img" 
+                        src="images/portfolio_img8.jpg" alt="вкладыш"
+                        width: 370px>
+                        <h2 class="product-title">Проект LAB</h2>
+                        <p class="product-post-title">Маркетинг</p>
+                    </li>
+                    <li class="product-item">
+                        <img class="product-img" 
+                        src="images/portfolio_img9.jpg" alt="ноутбук"
+                        width: 370px>
+                        <h2 class="product-title" lang="en">Growing Business</h2>
+                        <p class="product-post-title">Приложение</p>
+                    </li>
+                </ul>
+            </div>
+        </main>
+        <footer class="footer">
+            <div class="container footer-box">
+                <a class="link footer-link logo" href="index.html" lang="en">Web <span class="footer-span">Studio</span></a>
+                <address class="footer-address">
+                    <ul class="list footer-address-list">
+                        <li class="footer-address-item"><a class="link footer-address-link"
+                                href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!4m13!1m7!3m6!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!2z0LHRg9C7LiDQm9C10YHQuCDQo9C60YDQsNC40L3QutC4LCAyNiwg0JrQuNC10LIsIDAyMDAw!3b1!8m2!3d50.4265807!4d30.5383858!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
+                                target="_blank" rel="noreferrer noopener">г. Киев, пр-т Леси Украинки, 26</a></li>
+                        <li class="footer-address-item"><a class="link footer-address-contact"
+                                href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                        <li class="footer-address-item"><a class="link footer-address-contact" href="tel:+380961111111">+38 096
+                                111 11 11</a></li>
+                    </ul>
+                </address>
+            </div>
         </footer>
     </body>
 </html>
