--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 </div>
             </section>
             <section class="team">
-                <div class="container">
+                <div class="container team-box">
                 <h2 class="team-title">Наша команда</h2>
                     <ul class="list team-list">
                         <li class="team-list-item">
