--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
             <div class="container">
                 <ul class="list product-list">
                     <li class="product-item">
-                        <img class="product-img" width="370px" 
+                        <img class="product-img" width="370" 
                         src="images/portfolio_img.jpg" alt="ноутбук">
                         <div class="product-title-box">
                             <h2 class="product-title">Технокряк</h2>
@@ -59,7 +59,7 @@
                         </div>
                     </li>
                     <li class="product-item">
-                        <img class="product-img" width="370px" 
+                        <img class="product-img" width="370" 
                         src="images/portfolio_img2.jpg" alt="два баскетболиста">
                         <div class="product-title-box">
                             <h2 class="product-title">Постер New Orlean vs Golden Star</h2>
@@ -67,7 +67,7 @@
                         </div>
                     </li>
                     <li class="product-item">
-                        <img class="product-img" width="370px" 
+                        <img class="product-img" width="370" 
                         src="images/portfolio_img3.jpg" alt="эмблема в форме рыбы с названием ресторана">
                         <div class="product-title-box">
                             <h2 class="product-title">Ресторан Seafood</h2>
@@ -75,7 +75,7 @@
                         </div>
                     </li>
                     <li class="product-item">
-                        <img class="product-img" width="370px" 
+                        <img class="product-img" width="370" 
                         src="images/portfolio_img4.jpg" alt="наушники">
                         <div class="product-title-box">
                             <h2 class="product-title">Проект Prime</h2>
@@ -83,7 +83,7 @@
                         </div>
                     </li>
                     <li class="product-item">
-                        <img class="product-img" width="370px" 
+                        <img class="product-img" width="370" 
                         src="images/portfolio_img5.jpg" alt="два кубика">
                         <div class="product-title-box">
                             <h2 class="product-title">Проект Boxes</h2>
@@ -91,7 +91,7 @@
                         </div>
                     </li>
                     <li class="product-item">
-                        <img class="product-img" width="370px" 
+                        <img class="product-img" width="370" 
                         src="images/portfolio_img6.jpg" alt="экран компьютера">
                         <div class="product-title-box">
                             <h2 class="product-title" lang="en">Inspiration has no Borders</h2>
@@ -99,7 +99,7 @@
                         </div>
                     </li>
                     <li class="product-item">
-                        <img class="product-img" width="370px" 
+                        <img class="product-img" width="370" 
                         src="images/portfolio_img7.jpg" alt="журнал">
                         <div class="product-title-box">
                             <h2 class="product-title">Издание Limited Edition</h2>
@@ -107,7 +107,7 @@
                         </div>
                     </li>
                     <li class="product-item">
-                        <img class="product-img" width="370px" 
+                        <img class="product-img" width="370" 
                         src="images/portfolio_img8.jpg" alt="вкладыш">
                         <div class="product-title-box">
                             <h2 class="product-title">Проект LAB</h2>
@@ -115,7 +115,7 @@
                         </div>
                     </li>
                     <li class="product-item">
-                        <img class="product-img" width="370px" 
+                        <img class="product-img" width="370" 
                         src="images/portfolio_img9.jpg" alt="ноутбук">
                         <div class="product-title-box">
                             <h2 class="product-title" lang="en">Growing Business</h2>
