--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
         <header class="header">
             <div class="container header-box">
                 <nav class="nav">
-                    <a class="link logo" href="index.html" lang="en">Web<span class="header-span">Studio</span></a>
+                    <a class="link logo nav-a" href="index.html" lang="en">Web<span class="header-span">Studio</span></a>
                     <ul class="list nav-list">
                         <li class="nav-item">
                             <a class="link nav-link" href="index.html">Студия</a>
